<resources>
    <string name="app_name">Registration App</string>
    <string name="title">Registration Form</string>
    <string name="header">Welcome to Adventure Learning Club</string>
    <string name="fullname">Full Name:</string>
    <string name="g">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="suid">Student ID :</string>
    <string name="school">School :</string>
    <string name="email">E-mail :</string>
    <string name="phone">Phone Number :</string>
    <string name="reg">Register</string>
</resources>